fixed the spacing of the mobile navbar

--- a/index.css
+++ b/index.css
@@ -77,7 +77,7 @@ canvas.background {
 
 #mobile-nav a {
   color: white;
-  padding: 14px 16px;
+  padding: 1.1em 16px;
   text-decoration: none;
   font-size: 17px;
   display: block;
@@ -89,11 +89,6 @@ canvas.background {
   position: absolute;
   right: 0;
   top: 0;
-}
-
-#mobile-nav a:hover {
-  background-color: #ddd;
-  color: black;
 }
 
 .active {
